Don't use placeholders for branches so we don't test project branches

--- a/config/example_daily.cfg
+++ b/config/example_daily.cfg
@@ -8,7 +8,7 @@
         "applabel": "qa-auto@mozilla.com|mozmill_daily",
         "routing_key_regex": "build\\..+(-l10n)?-nightly\\.\\d+\\.finished",
         "platforms": ["macosx", "macosx64"],
-        "branches": [],
+        "branches": ["mozilla-central", "mozilla-aurora", "mozilla-1.9.2"],
         "products": ["firefox"],
         "locales": ["de", "en-US", "ja"]
     }
