--- a/config/example_l10n.cfg
+++ b/config/example_l10n.cfg
@@ -8,7 +8,7 @@
         "applabel": "qa-auto@mozilla.com|mozmill_l10n",
         "routing_key_regex": "build\\..+-l10n-dep\\.\\d+\\.finished",
         "platforms": ["macosx", "macosx64"],
-        "branches": [],
+        "branches": ["mozilla-central", "mozilla-aurora", "mozilla-1.9.2"],
         "products": ["firefox"],
         "locales": []
     }
