Move report URL into external configuration file

--- a/config/example_daily.cfg
+++ b/config/example_daily.cfg
@@ -4,6 +4,9 @@
         "username": "mozilla",
         "password": "test1234"
     },
+    "mozmill": {
+        "report_url": "http://mozmill-archive.brasstacks.mozilla.com/db/"
+    }
     "pulse": {
         "applabel": "qa-auto@mozilla.com|mozmill_daily",
         "routing_key_regex": "build\\..+(-l10n)?-nightly\\.\\d+\\.finished",
