Add a config setting to make a queue durable

--- a/config/example_daily.cfg
+++ b/config/example_daily.cfg
@@ -9,6 +9,7 @@
     },
     "pulse": {
         "applabel": "qa-auto@mozilla.com|mozmill_daily",
+        "durable": false,
         "routing_key_regex": "build\\..+(-l10n)?-nightly\\.\\d+\\.finished",
         "platforms": ["macosx", "macosx64"],
         "branches": ["mozilla-central", "mozilla-aurora", "mozilla-1.9.2"],
