--- a/config/example_l10n.cfg
+++ b/config/example_l10n.cfg
@@ -6,6 +6,7 @@
     },
     "pulse": {
         "applabel": "qa-auto@mozilla.com|mozmill_l10n",
+        "durable": false,
         "routing_key_regex": "build\\..+-l10n-dep\\.\\d+\\.finished",
         "platforms": ["macosx", "macosx64"],
         "branches": ["mozilla-central", "mozilla-aurora", "mozilla-1.9.2"],
