--- a/config/example_daily.cfg
+++ b/config/example_daily.cfg
@@ -1,18 +1,95 @@
 {
+    "pulse": {
+        "applabel": "qa-auto@mozilla.com|mozmill_daily",
+        "routing_key_regex": "build\\..+(-l10n)?-nightly\\.\\d+\\.finished",
+        "platforms": [
+            "macosx",
+            "macosx64"
+        ],
+        "branches": [
+            "mozilla-central",
+            "mozilla-aurora",
+            "mozilla-esr10",
+            "mozilla-1.9.2"
+        ],
+        "products": [
+            "firefox"
+        ],
+        "locales": [
+            "de",
+            "en-US",
+            "ja"
+        ]
+    },
     "jenkins": {
         "url": "http://localhost:8080",
         "username": "mozilla",
         "password": "test1234"
     },
-    "mozmill": {
-        "report_url": "http://mozmill-archive.brasstacks.mozilla.com/db/"
-    },
-    "pulse": {
-        "applabel": "qa-auto@mozilla.com|mozmill_daily",
-        "routing_key_regex": "build\\..+(-l10n)?-nightly\\.\\d+\\.finished",
-        "platforms": ["macosx", "macosx64"],
-        "branches": ["mozilla-central", "mozilla-aurora", "mozilla-1.9.2"],
-        "products": ["firefox"],
-        "locales": ["de", "en-US", "ja"]
+    "testrun": {
+        "jenkins_parameter_map": {
+            "default": {
+                "BRANCH": {
+                    "key": "branch"
+                },
+                "BUILD_ID": {
+                    "key": "buildid"
+                },
+                "LOCALE": {
+                    "key": "locale",
+                    "default": "en-US"
+                },
+                "PLATFORM": {
+                    "key": "platform",
+                    "transform": "getPlatformIdentifier"
+                },
+                "REPORT_URL": {
+                    "value": "http://mozmill-ci.blargon7.com/db/"
+                }
+            },
+            "endurance": {
+                "ENTITIES": {
+                    "value": 10
+                },
+                "ITERATIONS": {
+                    "value": 10
+                }
+            },
+            "update": {
+                "BUILD_ID": {
+                    "key": "previous_buildid"
+                },
+                "TARGET_BUILD_ID": {
+                    "key": "buildid"
+                }
+            }
+        },
+        "by_branch": {
+            "mozilla-central": [
+                "update",
+                "functional",
+                "endurance",
+                "addons"
+            ],
+            "mozilla-aurora": [
+                "update",
+                "functional",
+                "endurance",
+                "remote",
+                "addons"
+            ],
+            "mozilla-esr10": [
+                "update",
+                "functional",
+                "endurance",
+                "remote",
+                "addons"
+            ],
+            "mozilla-1.9.2": [
+                "update",
+                "functional",
+                "addons"
+            ]
+        }
     }
 }
