--- a/config/example_l10n.cfg
+++ b/config/example_l10n.cfg
@@ -1,15 +1,63 @@
 {
+    "pulse": {
+        "applabel": "qa-auto@mozilla.com|mozmill_l10n",
+        "routing_key_regex": "build\\..+-l10n-dep\\.\\d+\\.finished",
+        "platforms": [
+            "macosx",
+            "macosx64"
+        ],
+        "branches": [
+            "mozilla-central",
+            "mozilla-aurora",
+            "mozilla-esr10",
+            "mozilla-1.9.2"
+        ],
+        "products": [
+            "firefox"
+        ],
+        "locales": [
+        ]
+    },
     "jenkins": {
         "url": "http://localhost:8080",
         "username": "mozilla",
         "password": "test1234"
     },
-    "pulse": {
-        "applabel": "qa-auto@mozilla.com|mozmill_l10n",
-        "routing_key_regex": "build\\..+-l10n-dep\\.\\d+\\.finished",
-        "platforms": ["macosx", "macosx64"],
-        "branches": ["mozilla-central", "mozilla-aurora", "mozilla-1.9.2"],
-        "products": ["firefox"],
-        "locales": []
+    "testrun": {
+        "jenkins_parameter_map": {
+            "default": {
+                "BRANCH": {
+                    "key": "branch"
+                },
+                "BUILD_ID": {
+                    "key": "buildid"
+                },
+                "LOCALE": {
+                    "key": "locale",
+                    "default": "en-US"
+                },
+                "PLATFORM": {
+                    "key": "platform",
+                    "transform": "getPlatformIdentifier"
+                },
+                "REPORT_URL": {
+                    "value": "http://mozmill-ci.blargon7.com/db/"
+                }
+            }
+        },
+        "by_branch": {
+            "mozilla-central": [
+                "l10n"
+            ],
+            "mozilla-aurora": [
+                "l10n"
+            ],
+            "mozilla-esr10": [
+                "l10n"
+            ],
+            "mozilla-1.9.2": [
+                "l10n"
+            ]
+        }
     }
 }
