Add platform coverage per branch. Fixes issue #2

--- a/config/example_daily.cfg
+++ b/config/example_daily.cfg
@@ -3,8 +3,11 @@
         "applabel": "qa-auto@mozilla.com|mozmill_daily",
         "routing_key_regex": "build\\..+(-l10n)?-nightly\\.\\d+\\.finished",
         "platforms": [
+            "linux",
+            "linux64",
             "macosx",
-            "macosx64"
+            "macosx64",
+            "win32"
         ],
         "branches": [
             "mozilla-central",
@@ -41,7 +44,7 @@
                 },
                 "PLATFORM": {
                     "key": "platform",
-                    "transform": "getPlatformIdentifier"
+                    "transform": "get_platform_identifier"
                 },
                 "REPORT_URL": {
                     "value": "http://mozmill-ci.blargon7.com/db/"
@@ -65,31 +68,118 @@
             }
         },
         "by_branch": {
-            "mozilla-central": [
-                "update",
-                "functional",
-                "endurance",
-                "addons"
-            ],
-            "mozilla-aurora": [
-                "update",
-                "functional",
-                "endurance",
-                "remote",
-                "addons"
-            ],
-            "mozilla-esr10": [
-                "update",
-                "functional",
-                "endurance",
-                "remote",
-                "addons"
-            ],
-            "mozilla-1.9.2": [
-                "update",
-                "functional",
-                "addons"
-            ]
+            "mozilla-central": {
+                "testruns": [
+                    "update",
+                    "functional",
+                    "endurance",
+                    "addons"
+                ],
+                "platforms": {
+                    "mac": [
+                        "mac && 10.5 && 32bit",
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit"
+                    ],
+                    "linux": [
+                        "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
+                    ]
+                }
+            },
+            "mozilla-aurora": {
+                "testruns": [
+                    "update",
+                    "functional",
+                    "endurance",
+                    "remote",
+                    "addons"
+                ],
+                "platforms": {
+                    "mac": [
+                        "mac && 10.5 && 32bit",
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && 2000 && 32bit",
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit"
+                    ],
+                    "linux": [
+                        "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
+                    ]
+                }
+            },
+            "mozilla-esr10": {
+                "testruns": [
+                    "update",
+                    "functional",
+                    "endurance",
+                    "remote",
+                    "addons"
+                ],
+                "platforms": {
+                    "mac": [
+                        "mac && 10.5 && 32bit",
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && 2000 && 32bit",
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit"
+                    ],
+                    "linux": [
+                        "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
+                    ]
+                }
+            },
+            "mozilla-1.9.2": {
+                "testruns": [
+                    "update",
+                    "functional",
+                    "addons"
+                ],
+                "platforms": {
+                    "mac": [
+                        "mac && 10.5 && 32bit",
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && 2000 && 32bit",
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit"
+                    ],
+                    "linux": [
+                        "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
+                    ]
+                }
+            }
         }
     }
 }
