--- a/config/example_l10n.cfg
+++ b/config/example_l10n.cfg
@@ -3,14 +3,13 @@
         "applabel": "qa-auto@mozilla.com|mozmill_l10n",
         "routing_key_regex": "build\\..+-l10n-dep\\.\\d+\\.finished",
         "platforms": [
+            "linux",
             "macosx",
-            "macosx64"
+            "macosx64",
+            "win32"
         ],
         "branches": [
-            "mozilla-central",
-            "mozilla-aurora",
-            "mozilla-esr10",
-            "mozilla-1.9.2"
+            "mozilla-aurora"
         ],
         "products": [
             "firefox"
@@ -38,7 +37,7 @@
                 },
                 "PLATFORM": {
                     "key": "platform",
-                    "transform": "getPlatformIdentifier"
+                    "transform": "get_platform_identifier"
                 },
                 "REPORT_URL": {
                     "value": "http://mozmill-ci.blargon7.com/db/"
@@ -46,18 +45,24 @@
             }
         },
         "by_branch": {
-            "mozilla-central": [
-                "l10n"
-            ],
-            "mozilla-aurora": [
-                "l10n"
-            ],
-            "mozilla-esr10": [
-                "l10n"
-            ],
-            "mozilla-1.9.2": [
-                "l10n"
-            ]
+            "mozilla-aurora": {
+                "testruns": [
+                    "l10n"
+                ],
+                "platforms": {
+                    "mac": [
+                        "mac && 10.7 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && 2000 && 32bit",
+                        "windows && xp && 32bit",
+                        "windows && 7 && 32bit"
+                    ],
+                    "linux": [
+                        "linux && ubuntu && 32bit"
+                    ]
+                }
+            }
         }
     }
 }
