--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@
 *.log.*
 *.pyc
 *.bak
+jenkins-env/
 jenkins.war
-jenkins-master/jobs/*/builds/
-jenkins-master/jobs/*/lastStable
-jenkins-master/jobs/*/lastSuccessful
-jenkins-master/jobs/*/nextBuildNumber
+builds/
+lastStable
+lastSuccessful
+nextBuildNumber
 jenkins-master/plugins/*/
 jenkins-master/war
 
