Add BUILD_TYPE parameter and reorderd parameter list. Fixes issue #25

--- a/config/example_daily.cfg
+++ b/config/example_daily.cfg
@@ -35,6 +35,9 @@
                 "BUILD_ID": {
                     "key": "buildid"
                 },
+                "BUILD_TYPE": {
+                    "value": "daily"
+                },
                 "LOCALE": {
                     "key": "locale",
                     "default": "en-US"
