--- a/config/example_l10n.cfg
+++ b/config/example_l10n.cfg
@@ -28,6 +28,9 @@
                 "BUILD_ID": {
                     "key": "buildid"
                 },
+                "BUILD_TYPE": {
+                    "value": "tinderbox"
+                },
                 "LOCALE": {
                     "key": "locale",
                     "default": "en-US"
