--- a/config/release.json
+++ b/config/release.json
@@ -11,7 +11,7 @@
         ],
         "branches": [
             "release-mozilla-beta",
-            "release-mozilla-release",
+            "release-mozilla-release"
         ],
         "products": [
             "firefox"
