Added unnecessary files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
+*.key
 *.log
 *.log.*
 *.pyc
+*.tmp
 *.bak
 jenkins-env/
 jenkins.war
@@ -9,6 +11,29 @@ builds/
 lastStable
 lastSuccessful
 nextBuildNumber
+jenkins-master/.owner
+jenkins-master/fingerprints
+jenkins-master/hudson.maven.*
+jenkins-master/hudson.model.UpdateCenter.xml
+jenkins-master/hudson.scm.CVSSCM.xml
+jenkins-master/hudson.scm.SubversionSCM.xml
+jenkins-master/hudson.tasks.Ant.xml
+jenkins-master/hudson.tasks.Maven.xml
+jenkins-master/hudson.tasks.Shell.xml
+jenkins-master/hudson.triggers.SCMTrigger.xml
+jenkins-master/jobs/**/workspace/
+!jenkins-master/jobs/tools/workspace
+jenkins-master/log
+jenkins-master/nodeMonitors.xml
 jenkins-master/plugins/*/
+jenkins-master/plugins/ant.jpi
+jenkins-master/plugins/cvs.jpi
+jenkins-master/plugins/javadoc.jpi
+jenkins-master/plugins/maven-plugin.jpi
+jenkins-master/plugins/ruby-runtime.jpi
+jenkins-master/plugins/ssh-slaves.jpi
+jenkins-master/plugins/subversion.jpi
+jenkins-master/plugins/translation.jpi
 jenkins-master/war
-
+jenkins-master/updates
+jenkins-master/userContent
