Add final slash to the report URL

--- a/config/ondemand/l10n-linux.ini
+++ b/config/ondemand/l10n-linux.ini
@@ -1,6 +1,6 @@
 [testrun]
 script=l10n
-report=http://mozauto.iriscouch.com/mozmill-ondemand
+report=http://mozauto.iriscouch.com/mozmill-ondemand/
 
 [linux ubuntu 32bit]
 platform=linux
