--- a/config/ondemand/functional-all.ini
+++ b/config/ondemand/functional-all.ini
@@ -1,6 +1,6 @@
 [testrun]
 script=functional
-report=http://mozauto.iriscouch.com/mozmill-ondemand
+report=http://mozauto.iriscouch.com/mozmill-ondemand/
 
 [mac 10.5 64bit]
 platform=mac
