--- a/config/ondemand/l10n-mac.ini
+++ b/config/ondemand/l10n-mac.ini
@@ -1,6 +1,6 @@
 [testrun]
 script=l10n
-report=http://mozauto.iriscouch.com/mozmill-ondemand
+report=http://mozauto.iriscouch.com/mozmill-ondemand/
 
 [mac 10.7 64bit]
 platform=mac
