Enable OS X 10.8 machine for release builds and ondemand testrun (#134)

--- a/config/ondemand/functional-all.ini
+++ b/config/ondemand/functional-all.ini
@@ -14,6 +14,10 @@ platform=mac
 platform=mac
 8.0=en-US
 
+[mac 10.8 64bit]
+platform=mac
+8.0=en-US
+
 [linux ubuntu 32bit]
 platform=linux
 8.0=en-US
