--- a/config/release.json
+++ b/config/release.json
@@ -79,7 +79,8 @@
                     "mac": [
                         "mac && 10.5 && 32bit",
                         "mac && 10.6 && 64bit",
-                        "mac && 10.7 && 64bit"
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit"
                     ],
                     "win32": [
                         "windows && xp && 32bit",
@@ -106,7 +107,8 @@
                     "mac": [
                         "mac && 10.5 && 32bit",
                         "mac && 10.6 && 64bit",
-                        "mac && 10.7 && 64bit"
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit"
                     ],
                     "win32": [
                         "windows && xp && 32bit",
@@ -133,7 +135,8 @@
                     "mac": [
                         "mac && 10.5 && 32bit",
                         "mac && 10.6 && 64bit",
-                        "mac && 10.7 && 64bit"
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit"
                     ],
                     "win32": [
                         "windows && 2000 && 32bit",
