Use parameters for endurance testruns.

--- a/config/release.json
+++ b/config/release.json
@@ -51,6 +51,9 @@
                 }
             },
             "endurance": {
+                "DELAY": {
+                    "value": 0.1
+                },
                 "ENTITIES": {
                     "value": 10
                 },
