--- a/config/production/release.json
+++ b/config/production/release.json
@@ -12,6 +12,7 @@
         "branches": [
             "release-mozilla-beta",
             "release-mozilla-release",
+            "release-mozilla-esr17",
             "release-mozilla-esr10"
         ],
         "products": [
@@ -98,6 +99,35 @@
                 }
             },
             "release-mozilla-release": {
+                "testruns": [
+                    "functional",
+                    "endurance",
+                    "remote",
+                    "addons"
+                ],
+                "platforms": {
+                    "mac": [
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit",
+                        "windows && 8 && 32bit",
+                        "windows && 8 && 64bit"
+                    ],
+                    "linux": [
+                        "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
+                    ]
+                }
+            },
+            "release-mozilla-esr17": {
                 "testruns": [
                     "functional",
                     "endurance",
