Stop testing Windows and Linux for releases on old production

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -3,11 +3,8 @@
         "applabel": "qa-auto@mozilla.com|mozmill_release",
         "routing_key_regex": "build\\..+_build\\.\\d+\\.finished",
         "platforms": [
-            "linux",
-            "linux64",
             "macosx",
-            "macosx64",
-            "win32"
+            "macosx64"
         ],
         "branches": [
             "release-mozilla-beta",
@@ -81,20 +78,6 @@
                         "mac && 10.6 && 64bit",
                         "mac && 10.7 && 64bit",
                         "mac && 10.8 && 64bit"
-                    ],
-                    "win32": [
-                        "windows && xp && 32bit",
-                        "windows && vista && 32bit",
-                        "windows && 7 && 32bit",
-                        "windows && 7 && 64bit",
-                        "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
-                    ],
-                    "linux": [
-                        "linux && ubuntu && 32bit"
-                    ],
-                    "linux64": [
-                        "linux && ubuntu && 64bit"
                     ]
                 }
             },
@@ -110,20 +93,6 @@
                         "mac && 10.6 && 64bit",
                         "mac && 10.7 && 64bit",
                         "mac && 10.8 && 64bit"
-                    ],
-                    "win32": [
-                        "windows && xp && 32bit",
-                        "windows && vista && 32bit",
-                        "windows && 7 && 32bit",
-                        "windows && 7 && 64bit",
-                        "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
-                    ],
-                    "linux": [
-                        "linux && ubuntu && 32bit"
-                    ],
-                    "linux64": [
-                        "linux && ubuntu && 64bit"
                     ]
                 }
             },
@@ -139,20 +108,6 @@
                         "mac && 10.6 && 64bit",
                         "mac && 10.7 && 64bit",
                         "mac && 10.8 && 64bit"
-                    ],
-                    "win32": [
-                        "windows && xp && 32bit",
-                        "windows && vista && 32bit",
-                        "windows && 7 && 32bit",
-                        "windows && 7 && 64bit",
-                        "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
-                    ],
-                    "linux": [
-                        "linux && ubuntu && 32bit"
-                    ],
-                    "linux64": [
-                        "linux && ubuntu && 64bit"
                     ]
                 }
             },
@@ -168,21 +123,6 @@
                         "mac && 10.6 && 64bit",
                         "mac && 10.7 && 64bit",
                         "mac && 10.8 && 64bit"
-                    ],
-                    "win32": [
-                        "windows && 2000 && 32bit",
-                        "windows && xp && 32bit",
-                        "windows && vista && 32bit",
-                        "windows && 7 && 32bit",
-                        "windows && 7 && 64bit",
-                        "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
-                    ],
-                    "linux": [
-                        "linux && ubuntu && 32bit"
-                    ],
-                    "linux64": [
-                        "linux && ubuntu && 64bit"
                     ]
                 }
             }
