Use pulsebuildmonitor to handle build notifications (#176)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -1,24 +1,25 @@
 {
     "pulse": {
         "applabel": "qa-auto@mozilla.com|mozmill_release",
-        "routing_key_regex": "build\\..+_build\\.\\d+\\.finished",
-        "platforms": [
-            "macosx",
-            "macosx64"
-        ],
         "branches": [
             "release-mozilla-beta",
             "release-mozilla-release",
             "release-mozilla-esr17"
-        ],
-        "products": [
-            "firefox"
         ],
         "locales": [
             "de",
             "en-US",
             "fr",
             "it"
+        ],
+        "platforms": [
+            "macosx",
+            "macosx64"
+        ],
+        "products": [
+            "firefox"
+        ],
+        "tags": [
         ]
     },
     "jenkins": {
@@ -36,8 +37,7 @@
                     "value": "candidate"
                 },
                 "LOCALE": {
-                    "key": "locale",
-                    "default": "en-US"
+                    "key": "locale"
                 },
                 "PLATFORM": {
                     "key": "platform",
