--- a/config/production_new/release.json
+++ b/config/production_new/release.json
@@ -1,25 +1,26 @@
 {
     "pulse": {
         "applabel": "qa-auto@mozilla.com|mozmill_release",
-        "routing_key_regex": "build\\..+_build\\.\\d+\\.finished",
-        "platforms": [
-            "linux",
-            "linux64",
-            "win32"
-        ],
         "branches": [
             "release-mozilla-beta",
             "release-mozilla-release",
             "release-mozilla-esr17"
-        ],
-        "products": [
-            "firefox"
         ],
         "locales": [
             "de",
             "en-US",
             "fr",
             "it"
+        ],
+        "platforms": [
+            "linux",
+            "linux64",
+            "win32"
+        ],
+        "products": [
+            "firefox"
+        ],
+        "tags": [
         ]
     },
     "jenkins": {
@@ -37,8 +38,7 @@
                     "value": "candidate"
                 },
                 "LOCALE": {
-                    "key": "locale",
-                    "default": "en-US"
+                    "key": "locale"
                 },
                 "PLATFORM": {
                     "key": "platform",
