Fixup linux64 config for staging

--- a/config/staging/release.json
+++ b/config/staging/release.json
@@ -84,6 +84,9 @@
                     ],
                     "linux": [
                         "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
                     ]
                 }
             },
@@ -103,6 +106,9 @@
                     ],
                     "linux": [
                         "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
                     ]
                 }
             },
@@ -122,6 +128,9 @@
                     ],
                     "linux": [
                         "linux && ubuntu && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 64bit"
                     ]
                 }
             }
