Update URLs for new dashboard locations (#253)

--- a/config/ondemand/functional-all.ini
+++ b/config/ondemand/functional-all.ini
@@ -1,44 +1,55 @@
 [testrun]
 script=functional
-report=http://mozauto.iriscouch.com/mozmill-ondemand/
-
-[mac 10.5 64bit]
-platform=mac
-8.0=en-US
+report=http://mozauto.iriscouch.com/mozmill-release/
 
 [mac 10.6 64bit]
 platform=mac
-8.0=en-US
+22.0=en-US
 
 [mac 10.7 64bit]
 platform=mac
-8.0=en-US
+22.0=en-US
 
 [mac 10.8 64bit]
 platform=mac
-8.0=en-US
+22.0=en-US
 
-[linux ubuntu 32bit]
+[linux ubuntu 12.04 32bit]
 platform=linux
-8.0=en-US
+22.0=en-US
 
-[linux ubuntu 64bit]
+[linux ubuntu 12.04 64bit]
 platform=linux64
-8.0=en-US
+22.0=en-US
 
-[windows 7 32bit]
-platform=win32
-8.0=en-US
+[linux ubuntu 12.10 32bit]
+platform=linux
+22.0=en-US
 
-[windows 7 64bit]
-platform=win32
-8.0=en-US
-
-[windows vista 32bit]
-platform=win32
-8.0=en-US
+[linux ubuntu 12.10 64bit]
+platform=linux64
+22.0=en-US
 
 [windows xp 32bit]
 platform=win32
-8.0=en-us
+22.0=en-us
 
+[windows vista 32bit]
+platform=win32
+22.0=en-US
+
+[windows 7 32bit]
+platform=win32
+22.0=en-US
+
+[windows 7 64bit]
+platform=win32
+22.0=en-US
+
+[windows 8 32bit]
+platform=win32
+22.0=en-US
+
+[windows 8 64bit]
+platform=win32
+22.0=en-US
