--- a/config/ondemand/l10n-linux.ini
+++ b/config/ondemand/l10n-linux.ini
@@ -1,8 +1,8 @@
 [testrun]
 script=l10n
-report=http://mozauto.iriscouch.com/mozmill-ondemand/
+report=http://mozauto.iriscouch.com/mozmill-release/
 
-[linux ubuntu 32bit]
+[linux ubuntu 12.10 32bit]
 platform=linux
-7.0.1=en-US
-8.0=en-US
+21.0=en-US
+22.0=en-US
