--- a/config/ondemand/update-mac.ini
+++ b/config/ondemand/update-mac.ini
@@ -1,11 +1,11 @@
 [testrun]
 script=update
-report=http://mozauto.iriscouch.com/mozmill-ondemand/
+report=http://mozauto.iriscouch.com/mozmill-release/
 target-build-id=20120403211507
 channel=release
 
 [mac 10.6 64bit]
 platform=mac
-6.0=en-US ja-JP-mac
-6.0.1=en-US de
-6.0.2=en-US ko
+20.0=en-US ja-JP-mac
+21.0=en-US de
+
