--- a/config/production/release.json
+++ b/config/production/release.json
@@ -47,7 +47,7 @@
                     "transform": "get_platform_identifier"
                 },
                 "REPORT_URL": {
-                    "value": "http://mozauto.iriscouch.com/mozmill-ci/"
+                    "value": "http://mozauto.iriscouch.com/mozmill-release/"
                 },
                 "VERSION": {
                     "key": "version"
