--- a/config/ondemand/l10n-mac.ini
+++ b/config/ondemand/l10n-mac.ini
@@ -1,9 +1,8 @@
 [testrun]
 script=l10n
-report=http://mozauto.iriscouch.com/mozmill-ondemand/
+report=http://mozauto.iriscouch.com/mozmill-release/
 
 [mac 10.7 64bit]
 platform=mac
-11.0#2=en-US
-7.0.1=en-US
-8.0=en-GB en-US
+22.0#1=en-US
+22.0=en-GB en-US
