Enable Ubuntu 13.04 jobs (#261)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -81,11 +81,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 12.10 && 32bit"
+                        "linux && ubuntu && 12.10 && 32bit",
+                        "linux && ubuntu && 13.04 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 12.10 && 64bit"
+                        "linux && ubuntu && 12.10 && 64bit",
+                        "linux && ubuntu && 13.04 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
@@ -112,11 +114,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 12.10 && 32bit"
+                        "linux && ubuntu && 12.10 && 32bit",
+                        "linux && ubuntu && 13.04 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 12.10 && 64bit"
+                        "linux && ubuntu && 12.10 && 64bit",
+                        "linux && ubuntu && 13.04 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
@@ -143,11 +147,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 12.10 && 32bit"
+                        "linux && ubuntu && 12.10 && 32bit",
+                        "linux && ubuntu && 13.04 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 12.10 && 64bit"
+                        "linux && ubuntu && 12.10 && 64bit",
+                        "linux && ubuntu && 13.04 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
