--- a/config/ondemand/functional-all.ini
+++ b/config/ondemand/functional-all.ini
@@ -4,52 +4,60 @@ report=http://mozauto.iriscouch.com/mozmill-release/
 
 [mac 10.6 64bit]
 platform=mac
-22.0=en-US
+23.0.1=en-US
 
 [mac 10.7 64bit]
 platform=mac
-22.0=en-US
+23.0.1=en-US
 
 [mac 10.8 64bit]
 platform=mac
-22.0=en-US
+23.0.1=en-US
 
 [linux ubuntu 12.04 32bit]
 platform=linux
-22.0=en-US
+23.0.1=en-US
 
 [linux ubuntu 12.04 64bit]
 platform=linux64
-22.0=en-US
+23.0.1=en-US
 
 [linux ubuntu 12.10 32bit]
 platform=linux
-22.0=en-US
+23.0.1=en-US
 
 [linux ubuntu 12.10 64bit]
 platform=linux64
-22.0=en-US
+23.0.1=en-US
+
+[linux ubuntu 13.04 32bit]
+platform=linux
+23.0.1=en-US
+
+[linux ubuntu 13.04 64bit]
+platform=linux64
+23.0.1=en-US
 
 [windows xp 32bit]
 platform=win32
-22.0=en-us
+23.0.1=en-us
 
 [windows vista 32bit]
 platform=win32
-22.0=en-US
+23.0.1=en-US
 
 [windows 7 32bit]
 platform=win32
-22.0=en-US
+23.0.1=en-US
 
 [windows 7 64bit]
 platform=win32
-22.0=en-US
+23.0.1=en-US
 
 [windows 8 32bit]
 platform=win32
-22.0=en-US
+23.0.1=en-US
 
 [windows 8 64bit]
 platform=win32
-22.0=en-US
+23.0.1=en-US
