Enable tests for Windows 8.1 (#251)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -104,7 +104,9 @@
                         "windows && 7 && 32bit",
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             },
@@ -135,7 +137,9 @@
                         "windows && 7 && 32bit",
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             },
@@ -166,7 +170,9 @@
                         "windows && 7 && 32bit",
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             }
