--- a/config/production/release.json
+++ b/config/production/release.json
@@ -4,6 +4,7 @@
         "branches": [
             "release-mozilla-beta",
             "release-mozilla-release",
+            "release-mozilla-esr24",
             "release-mozilla-esr17"
         ],
         "locales": [
@@ -111,6 +112,39 @@
                 }
             },
             "release-mozilla-release": {
+                "testruns": [
+                    "functional",
+                    "endurance",
+                    "remote",
+                    "addons"
+                ],
+                "platforms": {
+                    "linux": [
+                        "linux && ubuntu && 12.04 && 32bit",
+                        "linux && ubuntu && 13.04 && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 12.04 && 64bit",
+                        "linux && ubuntu && 13.04 && 64bit"
+                    ],
+                    "mac": [
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit",
+                        "windows && 8 && 32bit",
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
+                    ]
+                }
+            },
+            "release-mozilla-esr24": {
                 "testruns": [
                     "functional",
                     "endurance",
