--- a/config/production/release.json
+++ b/config/production/release.json
@@ -106,7 +106,9 @@
                         "windows && 7 && 32bit",
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             },
@@ -129,7 +131,8 @@
                     "mac": [
                         "mac && 10.6 && 64bit",
                         "mac && 10.7 && 64bit",
-                        "mac && 10.8 && 64bit"
+                        "mac && 10.8 && 64bit",
+                        "mac && 10.9 && 64bit"
                     ],
                     "win32": [
                         "windows && xp && 32bit",
@@ -138,7 +141,8 @@
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
                         "windows && 8 && 64bit",
-                        "mac && 10.9 && 64bit"
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             },
@@ -170,7 +174,9 @@
                         "windows && 7 && 32bit",
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             },
@@ -201,7 +207,9 @@
                         "windows && 7 && 32bit",
                         "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
-                        "windows && 8 && 64bit"
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             }
