Allow project branches to be run in Mozmill-CI jobs (#337)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -40,6 +40,9 @@
     "testrun": {
         "jenkins_parameter_map": {
             "default": {
+                "BRANCH": {
+                    "key": "branch"
+                },
                 "BUILD_NUMBER": {
                     "key": "build_number"
                 },
