--- a/config/staging/release.json
+++ b/config/staging/release.json
@@ -84,6 +84,7 @@
                         "mac && 10.6 && 64bit"
                     ],
                     "win32": [
+                        "windows && xp && 32bit",
                         "windows && 7 && 32bit"
                     ],
                     "linux": [
@@ -106,6 +107,7 @@
                         "mac && 10.6 && 64bit"
                     ],
                     "win32": [
+                        "windows && xp && 32bit",
                         "windows && 7 && 32bit"
                     ],
                     "linux": [
@@ -128,6 +130,7 @@
                         "mac && 10.6 && 64bit"
                     ],
                     "win32": [
+                        "windows && xp && 32bit",
                         "windows && 7 && 32bit"
                     ],
                     "linux": [
@@ -150,6 +153,7 @@
                         "mac && 10.6 && 64bit"
                     ],
                     "win32": [
+                        "windows && xp && 32bit",
                         "windows && 7 && 32bit"
                     ],
                     "linux": [
