--- a/config/production/release.json
+++ b/config/production/release.json
@@ -91,11 +91,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 13.04 && 32bit"
+                        "linux && ubuntu && 13.04 && 32bit",
+                        "linux && ubuntu && 13.10 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 13.04 && 64bit"
+                        "linux && ubuntu && 13.04 && 64bit",
+                        "linux && ubuntu && 13.10 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
@@ -125,11 +127,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 13.04 && 32bit"
+                        "linux && ubuntu && 13.04 && 32bit",
+                        "linux && ubuntu && 13.10 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 13.04 && 64bit"
+                        "linux && ubuntu && 13.04 && 64bit",
+                        "linux && ubuntu && 13.10 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
@@ -159,11 +163,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 13.04 && 32bit"
+                        "linux && ubuntu && 13.04 && 32bit",
+                        "linux && ubuntu && 13.10 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 13.04 && 64bit"
+                        "linux && ubuntu && 13.04 && 64bit",
+                        "linux && ubuntu && 13.10 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
@@ -192,11 +198,13 @@
                 "platforms": {
                     "linux": [
                         "linux && ubuntu && 12.04 && 32bit",
-                        "linux && ubuntu && 13.04 && 32bit"
+                        "linux && ubuntu && 13.04 && 32bit",
+                        "linux && ubuntu && 13.10 && 32bit"
                     ],
                     "linux64": [
                         "linux && ubuntu && 12.04 && 64bit",
-                        "linux && ubuntu && 13.04 && 64bit"
+                        "linux && ubuntu && 13.04 && 64bit",
+                        "linux && ubuntu && 13.10 && 64bit"
                     ],
                     "mac": [
                         "mac && 10.6 && 64bit",
