Remove Ubuntu 13.04 machines and configurations from production (#386)

--- a/config/ondemand/functional-all.ini
+++ b/config/ondemand/functional-all.ini
@@ -4,52 +4,52 @@ report=http://mozauto.iriscouch.com/mozmill-release/
 
 [mac 10.6 64bit]
 platform=mac
-23.0.1=en-US
+24.0esr=en-US
 
 [mac 10.7 64bit]
 platform=mac
-23.0.1=en-US
+24.0esr=en-US
 
 [mac 10.8 64bit]
 platform=mac
-23.0.1=en-US
+24.0esr=en-US
 
 [linux ubuntu 12.04 32bit]
 platform=linux
-23.0.1=en-US
+24.0esr=en-US
 
 [linux ubuntu 12.04 64bit]
 platform=linux64
-23.0.1=en-US
+24.0esr=en-US
 
-[linux ubuntu 13.04 32bit]
+[linux ubuntu 13.10 32bit]
 platform=linux
-23.0.1=en-US
+24.0esr=en-US
 
-[linux ubuntu 13.04 64bit]
+[linux ubuntu 13.10 64bit]
 platform=linux64
-23.0.1=en-US
+24.0esr=en-US
 
 [windows xp 32bit]
 platform=win32
-23.0.1=en-us
+24.0esr=en-us
 
 [windows vista 32bit]
 platform=win32
-23.0.1=en-US
+24.0esr=en-US
 
 [windows 7 32bit]
 platform=win32
-23.0.1=en-US
+24.0esr=en-US
 
 [windows 7 64bit]
 platform=win32
-23.0.1=en-US
+24.0esr=en-US
 
 [windows 8 32bit]
 platform=win32
-23.0.1=en-US
+24.0esr=en-US
 
 [windows 8 64bit]
 platform=win32
-23.0.1=en-US
+24.0esr=en-US
