Add ja-JP-mac locale to release testruns (#439)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -80,6 +80,7 @@
                     "fr",
                     "it",
                     "ja",
+                    "ja-JP-mac",
                     "pl",
                     "pt-BR",
                     "ru"
@@ -126,6 +127,7 @@
                     "fr",
                     "it",
                     "ja",
+                    "ja-JP-mac",
                     "pl",
                     "pt-BR",
                     "ru"
