Upgrade to Jenkins 1.554.2 (#395)

--- a/jenkins-master/.gitignore
+++ b/jenkins-master/.gitignore
@@ -26,20 +26,24 @@ monitoring/
 nodeMonitors.xml
 plugins/*/
 plugins/ant.jpi
+plugins/antisamy-markup-formatter.jpi
 plugins/cvs.jpi
 plugins/credentials.jpi
 plugins/external-monitor-job.jpi
 plugins/javadoc.jpi
 plugins/ldap.jpi
 plugins/mailer.jpi
+plugins/matrix-auth.jpi
 plugins/maven-plugin.jpi
 plugins/pam-auth.jpi
 plugins/ssh-credentials.jpi
 plugins/ssh-slaves.jpi
 plugins/subversion.jpi
 plugins/translation.jpi
+plugins/windows-slaves.jpi
 queue.xml
 secret*
 updates
 userContent
+users/
 war/
