--- a/config/staging/release.json
+++ b/config/staging/release.json
@@ -4,6 +4,7 @@
         "branches": [
             "release-mozilla-beta",
             "release-mozilla-release",
+            "release-mozilla-esr31",
             "release-mozilla-esr24"
         ],
         "platforms": [
@@ -106,6 +107,40 @@
                 }
             },
             "release-mozilla-release": {
+                "locales": [
+                    "en-US"
+                ],
+                "testruns": [
+                    "functional",
+                    "endurance",
+                    "remote",
+                    "addons"
+                ],
+                "platforms": {
+                    "linux": [
+                        "linux && ubuntu && 12.04 && 32bit",
+                        "linux && ubuntu && 13.10 && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 12.04 && 64bit",
+                        "linux && ubuntu && 13.10 && 64bit"
+                    ],
+                    "mac": [
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit",
+                        "mac && 10.9 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && xp && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
+                    ]
+                }
+            },
+            "release-mozilla-esr31": {
                 "locales": [
                     "en-US"
                 ],
