--- a/config/ondemand/update-override-update-channel.ini
+++ b/config/ondemand/update-override-update-channel.ini
@@ -1,7 +1,7 @@
-; For updating a release candidate to a beta build we have to update the
-; channel to beta and also add the "firefox-mozilla-beta" mar channel id
-; to update-settings.ini file. For that we have to give it as an
-; override-update-settings argument.
+; For updating a release candidate to a beta build, we have to update the
+; channel to beta first, and also add the "firefox-mozilla-beta" mar channel id
+; to update-settings.ini file. This can be done with the override-update-channel
+; parameter under the testrun section.
 
 [testrun]
 script=update
