--- a/config/ondemand/update-override-update-url.ini
+++ b/config/ondemand/update-override-update-url.ini
@@ -1,7 +1,6 @@
-; For updating a release candidate to a beta build we have to update the
-; channel to beta and also add the "firefox-mozilla-beta" mar channel id
-; to update-settings.ini file. For that we have to give it as an
-; override-update-settings argument.
+; For checking updates against a different update server, the update URL has to be
+; replaced. This can be done with the override-update-url parameter under the
+; testrun section.
 
 [testrun]
 script=update
